# SO-Projekt1

./: CMakeLists.txt  README.md
source/class/: Philosopher.cpp  main.cpp
source/headers/: Philosopher.h
